@@ -1,3 +1,8 @@
+2005-03-21  Mark McLoughlin  <markmc@redhat.com>
+
+	* sabayon.spec.in: lots of changes from Fedora Extras
+	review.
+
 2005-03-18  Mark McLoughlin  <markmc@redhat.com>
 
 	* sabayon.spec.in: add BuildRequires: gettext-devel
